integration_tests/codegen_fail/fail/subscription/field_non_output_return_type.stderr
error[E0277]: the trait bound `ObjB: IsOutputType<__S>` is not satisfied
  --> fail/subscription/field_non_output_return_type.rs:15:1
   |
15 | #[graphql_subscription]
   | ^^^^^^^^^^^^^^^^^^^^^^^ the trait `IsOutputType<__S>` is not implemented for `ObjB`
   |
   = note: this error originates in the attribute macro `graphql_subscription` (in Nightly builds, run with -Z macro-backtrace for more info)
